--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <section id="home" class="hero">
     <div class="overlay"></div>
     <div class="hero-content">
-      <h1>Hello! I'm <span>Tanbir Rahman</span></h1>
-      <p>UI/UX Designer & Web Developer</p>
+      <h1>Hello! I'm <span>Husen Fahmi</span></h1>
+      <p>Students of SMAN 1 RENGASDENGKLOK School</p>
       <a href="#contact" class="btn">Contact Me</a>
     </div>
   </section>
@@ -36,7 +36,7 @@
       <img src="your-photo.jpg" alt="Your Photo" class="about-img"/>
       <div class="about-text">
         <h2>About Me</h2>
-        <p>A passionate developer and designer who loves crafting elegant solutions with clean code and modern design.</p>
+        <p>I dont know im just bored and need a job hehe</p>
         <a href="#" class="btn">Download CV</a>
       </div>
     </div>
@@ -45,12 +45,12 @@
   <section id="services" class="services">
     <h2>My Services</h2>
     <div class="service-grid">
-      <div class="service-box"><i class="fas fa-pencil-ruler"></i><p>UI/UX Design</p></div>
-      <div class="service-box"><i class="fas fa-code"></i><p>Web Development</p></div>
-      <div class="service-box"><i class="fas fa-paint-brush"></i><p>Graphic Design</p></div>
-      <div class="service-box"><i class="fas fa-search"></i><p>SEO</p></div>
-      <div class="service-box"><i class="fas fa-bullhorn"></i><p>Branding</p></div>
-      <div class="service-box"><i class="fas fa-mobile-alt"></i><p>Mobile App</p></div>
+      <div class="service-box"><i class="fas fa-pencil-ruler"></i><p>Communication & Presentation</p></p></div>
+      <div class="service-box"><i class="fas fa-code"></i><p>Problem Solving</p></div>
+      <div class="service-box"><i class="fas fa-paint-brush"></i><p>Adaptability</p></div>
+      <div class="service-box"><i class="fas fa-search"></i><p>Time Management</p></div>
+      <div class="service-box"><i class="fas fa-bullhorn"></i><p>AI-Powered Web Design</p></div>
+      <div class="service-box"><i class="fas fa-mobile-alt"></i><p>Prompt Engineering Dasar</p></div>
     </div>
   </section>
 
@@ -66,8 +66,8 @@
 
   <footer id="contact" class="contact">
     <h2>Contact Me</h2>
-    <p>Email: your@email.com</p>
-    <p>© 2025 YourName. All rights reserved.</p>
+    <p>Email:  husenfahmi252@email.com</p>
+    <p>© 2025 HusenFahmi. All rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
