--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header class="navbar">
-    <div class="logo">HusenFahmi</div>
+    <div class="logo">Husen Fahmi</div>
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
@@ -40,7 +40,7 @@
       <img src="img/profile.jpg" alt="Your Photo" class="about-img"/>
       <div class="about-text">
         <h2>About Me</h2>
-        <p>I’m Husen Fahmi, a student passionate about design and technology. I’m currently learning to build engaging and modern websites while improving my creativity and logic.</p>
+        <p>I’m Husen Fahmi, a student and I’m currently learning to build engaging and modern websites while improving my creativity and logic.I dont know,just bored and i need job</p>
         <a href="cv-husenfahmi.pdf" class="btn" download>Download CV</a>
       </div>
     </div>
