--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <img src="img/profile.jpg" alt="Your Photo" class="about-img"/>
       <div class="about-text">
         <h2>About Me</h2>
-        <p>I’m Husen Fahmi, a student passionate about design and technology. I’m currently learning to build engaging and modern websites while improving my creativity and logic.</p>
+        <p>I’m Husen Fahmi, a student and I’m currently learning to build engaging and modern websites while improving my creativity and logic. I dont know,just bored and need a job</p>
         <a href="cv-husenfahmi.pdf" class="btn" download>Download CV</a>
       </div>
     </div>
