--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <header class="navbar">
-    <div class="logo">HusenFahmi</div>
+    <div class="logo">HUSEN FAHMI</div>
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
