--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,20 +7,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-
-    <noscript>
-      <style>
-        .fade-section {
-          opacity: 1 !important;
-          transform: none !important;
-        }
-      </style>
-    </noscript>
-    
 </head>
 <body>
   <header class="navbar">
-    <div class="logo">HUSEN FAHMI</div>
+    <div class="logo">HusenFahmi</div>
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
@@ -36,7 +25,7 @@
   <section id="home" class="hero fade-section">
     <div class="overlay"></div>
     <div class="hero-content">
-      <h1>Hello! I'm <span>Husen Fahmi</span></h1>
+      <h1>Hello! I'm <span></span></h1>
       <p>Student of SMAN 1 RENGASDENGKLOK School</p>
       <a href="#contact" class="btn">Contact Me</a>
     </div>
@@ -50,7 +39,7 @@
       <img src="img/profile.jpg" alt="Your Photo" class="about-img"/>
       <div class="about-text">
         <h2>About Me</h2>
-        <p>I’m Husen Fahmi, a student and I’m currently learning to build engaging and modern websites while improving my creativity and logic. I dont know,just bored and need a job</p>
+        <p>I’m Husen Fahmi, a student and I’m currently learning to build engaging and modern websites while improving my creativity and logic. I dont know, just bored and need a job</p>
         <a href="cv-husenfahmi.pdf" class="btn" download>Download CV</a>
       </div>
     </div>
@@ -78,7 +67,6 @@
     </div>
   </section>
 
-
   <footer id="contact" class="contact fade-section">
     <h2>Contact Me</h2>
     <p>Email: husenfahmi252@email.com</p>
@@ -90,5 +78,7 @@
     </div>
     <p>© 2025 HusenFahmi. All rights reserved.</p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
