--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header class="navbar">
-    <div class="logo">HusenFahmi</div>
+    <div class="logo">HUSEN FAHMI</div>
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
@@ -25,9 +25,14 @@
   <section id="home" class="hero fade-section">
     <div class="overlay"></div>
     <div class="hero-content">
-      <h1>Hello! I'm <span></span></h1>
+      <h1>Hello! I'm <span>Husen Fahmi</span></h1>
       <p>Student of SMAN 1 RENGASDENGKLOK School</p>
       <a href="#contact" class="btn">Contact Me</a>
+    </div>
+    <div class="social-icons-home">
+      <a href="https://www.linkedin.com/in/husenfahmi" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.jobstreet.co.id/id/jobseeker/profile" target="_blank"><i class="fas fa-briefcase"></i></a>
+      <a href="https://github.com/Evildeye" target="_blank"><i class="fab fa-github"></i></a>
     </div>
     <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100">
       <path fill="#ffffff" fill-opacity="1" d="M0,64L48,80C96,96,192,128,288,128C384,128,480,96,576,74.7C672,53,768,43,864,69.3C960,96,1056,160,1152,165.3C1248,171,1344,117,1392,90.7L1440,64L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
@@ -39,7 +44,7 @@
       <img src="img/profile.jpg" alt="Your Photo" class="about-img"/>
       <div class="about-text">
         <h2>About Me</h2>
-        <p>I’m Husen Fahmi, a student and I’m currently learning to build engaging and modern websites while improving my creativity and logic. I dont know, just bored and need a job</p>
+        <p>I’m Husen Fahmi, a student and I’m currently learning to build engaging and modern websites while improving my creativity and logic. I don't know, just bored and need a job.</p>
         <a href="cv-husenfahmi.pdf" class="btn" download>Download CV</a>
       </div>
     </div>
@@ -75,6 +80,7 @@
     <div class="social-icons">
       <a href="https://www.linkedin.com/in/husenfahmi" target="_blank"><i class="fab fa-linkedin"></i></a>
       <a href="https://www.jobstreet.co.id/id/jobseeker/profile" target="_blank"><i class="fas fa-briefcase"></i></a>
+      <a href="https://github.com/Evildeye" target="_blank"><i class="fab fa-github"></i></a>
     </div>
     <p>© 2025 HusenFahmi. All rights reserved.</p>
   </footer>
