--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Personal Brand | Husen Fahmi</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css" />
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 <body>
   <header class="navbar">
@@ -29,19 +29,13 @@
       <p>Student of SMAN 1 RENGASDENGKLOK School</p>
       <a href="#contact" class="btn">Contact Me</a>
     </div>
-    <div class="social-icons-home">
-      <a href="https://www.linkedin.com/in/husenfahmi" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://www.jobstreet.co.id/id/jobseeker/profile" target="_blank"><i class="fas fa-briefcase"></i></a>
-      <a href="https://github.com/Evildeye" target="_blank"><i class="fab fa-github"></i></a>
-    </div>
-    <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100">
-      <path fill="#ffffff" fill-opacity="1" d="M0,64L48,80C96,96,192,128,288,128C384,128,480,96,576,74.7C672,53,768,43,864,69.3C960,96,1056,160,1152,165.3C1248,171,1344,117,1392,90.7L1440,64L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
-    </svg>
   </section>
 
   <section id="about" class="about fade-section">
     <div class="container">
-      <img src="img/profile.jpg" alt="Your Photo" class="about-img"/>
+      <div class="about-img">
+        <img src="img/profile.jpg" alt="Husen Fahmi"/>
+      </div>
       <div class="about-text">
         <h2>About Me</h2>
         <p>I’m Husen Fahmi, a student and I’m currently learning to build engaging and modern websites while improving my creativity and logic. I don't know, just bored and need a job.</p>
@@ -65,10 +59,10 @@
   <section id="portfolio" class="portfolio fade-section">
     <h2>My Recent Work</h2>
     <div class="portfolio-grid">
-      <img src="project1.jpg" />
-      <img src="project2.jpg" />
-      <img src="project3.jpg" />
-      <img src="project4.jpg" />
+      <img src="project1.jpg" alt="Project 1"/>
+      <img src="project2.jpg" alt="Project 2"/>
+      <img src="project3.jpg" alt="Project 3"/>
+      <img src="project4.jpg" alt="Project 4"/>
     </div>
   </section>
 
@@ -78,13 +72,11 @@
     <p>Phone: 085774590205</p>
     <p>Instagram: @evildeye</p>
     <div class="social-icons">
-      <a href="https://www.linkedin.com/in/husenfahmi" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://www.jobstreet.co.id/id/jobseeker/profile" target="_blank"><i class="fas fa-briefcase"></i></a>
-      <a href="https://github.com/Evildeye" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/husenfahmi" target="_blank" title="LinkedIn"><i class="fab fa-linkedin fa-2x"></i></a>
+      <a href="https://www.jobstreet.co.id/id/jobseeker/profile" target="_blank" title="JobStreet"><i class="fas fa-briefcase fa-2x"></i></a>
+      <a href="https://github.com/evildeye" target="_blank" title="GitHub"><i class="fab fa-github fa-2x"></i></a>
     </div>
-    <p>© 2025 HusenFahmi. All rights reserved.</p>
+    <p>© 2025 Husen Fahmi. All rights reserved.</p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
