--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Husen Fahmi</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Husen Fahmi - Personal Brand</title>
   <link rel="stylesheet" href="styles.css" />
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 <body>
   <header class="navbar">
@@ -20,35 +20,41 @@
       </ul>
     </nav>
     <div class="social-icons">
-      <a href="https://linkedin.com" target="_blank" aria-label="LinkedIn">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="https://jobstreet.co.id" target="_blank" aria-label="JobStreet">
-        <i class="fas fa-briefcase"></i>
-      </a>
-      <a href="https://github.com" target="_blank" aria-label="GitHub">
-        <i class="fab fa-github"></i>
-      </a>
+      <a href="https://linkedin.com/in/username" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.jobstreet.com" target="_blank"><i class="fas fa-briefcase"></i></a>
+      <a href="https://github.com/username" target="_blank"><i class="fab fa-github"></i></a>
     </div>
   </header>
 
   <section id="home" class="hero">
     <div class="hero-content">
-      <h1>Hello! I'm <span>Husen Fahmi</span></h1>
+      <h1>Hello! I'm <span id="typed-text"></span></h1>
       <p>Student of SMAN 1 RENGASDENGKLOK School</p>
       <a href="#contact" class="btn">Contact Me</a>
     </div>
-    <div class="profile-picture">
-      <img src="profile.jpg" alt="Husen Fahmi" />
+    <div class="hero-image">
+      <img src="profile.jpg" alt="Profile Picture" />
     </div>
   </section>
 
-  <section id="about">
+  <section id="about" class="fade-section">
     <h2>About Me</h2>
-    <p>I'm Husen Fahmi, a student and I'm currently learning to build engaging and modern websites while improving my creativity and logic. I don't know, just bored and need a job.</p>
-    <a href="#" class="btn">Download CV</a>
+    <p>I’m Husen Fahmi, a student and I’m currently learning to build engaging and modern websites while improving my creativity and logic. I don’t know, just bored and need a job.</p>
+    <a href="cv.pdf" class="btn" download>Download CV</a>
   </section>
 
-  <!-- Tambahan section lainnya jika perlu -->
+  <section id="services" class="fade-section">
+    <h2>My Services</h2>
+    <ul class="services">
+      <li><i class="fas fa-chalkboard-teacher"></i> Communication & Presentation</li>
+      <li><i class="fas fa-code"></i> Problem Solving</li>
+      <li><i class="fas fa-paint-brush"></i> Adaptability</li>
+      <li><i class="fas fa-clock"></i> Time Management</li>
+      <li><i class="fas fa-bullhorn"></i> Web Design with AI</li>
+      <li><i class="fas fa-mobile-alt"></i> Prompt Engineering</li>
+    </ul>
+  </section>
+
+  <script src="script.js"></script>
 </body>
 </html>
