--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,20 +7,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-
-    <noscript>
-      <style>
-        .fade-section {
-          opacity: 1 !important;
-          transform: none !important;
-        }
-      </style>
-    </noscript>
-    
+  <noscript>
+    <style>
+      .fade-section {
+        opacity: 1 !important;
+        transform: none !important;
+      }
+    </style>
+  </noscript>
 </head>
 <body>
   <header class="navbar">
-    <div class="logo">HusenFahmi</div>
+    <div class="logo">Husen Fahmi</div>
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
@@ -29,16 +26,22 @@
         <li><a href="#services">Services</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><a href="https://www.linkedin.com/in/husenfahmi" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+        <li><a href="https://www.jobstreet.co.id/id/jobseeker/profile" target="_blank"><i class="fas fa-briefcase"></i></a></li>
+        <li><a href="https://github.com/Evildeye" target="_blank"><i class="fab fa-github"></i></a></li>
       </ul>
     </nav>
   </header>
 
   <section id="home" class="hero fade-section">
     <div class="overlay"></div>
-    <div class="hero-content">
+    <div class="hero-content slide-in-left">
       <h1>Hello! I'm <span>Husen Fahmi</span></h1>
       <p>Student of SMAN 1 RENGASDENGKLOK School</p>
       <a href="#contact" class="btn">Contact Me</a>
+      <div class="home-image">
+        <img src="img/profile.jpg" alt="Profile" class="rounded-frame" />
+      </div>
     </div>
     <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100">
       <path fill="#ffffff" fill-opacity="1" d="M0,64L48,80C96,96,192,128,288,128C384,128,480,96,576,74.7C672,53,768,43,864,69.3C960,96,1056,160,1152,165.3C1248,171,1344,117,1392,90.7L1440,64L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
@@ -50,7 +53,7 @@
       <img src="img/profile.jpg" alt="Your Photo" class="about-img"/>
       <div class="about-text">
         <h2>About Me</h2>
-        <p>I’m Husen Fahmi, a student and I’m currently learning to build engaging and modern websites while improving my creativity and logic. I dont know,just bored and need a job</p>
+        <p>I’m Husen Fahmi, a student and I’m currently learning to build engaging and modern websites while improving my creativity and logic. I dont know, just bored and need a job</p>
         <a href="cv-husenfahmi.pdf" class="btn" download>Download CV</a>
       </div>
     </div>
@@ -78,7 +81,6 @@
     </div>
   </section>
 
-
   <footer id="contact" class="contact fade-section">
     <h2>Contact Me</h2>
     <p>Email: husenfahmi252@email.com</p>
@@ -87,6 +89,7 @@
     <div class="social-icons">
       <a href="https://www.linkedin.com/in/husenfahmi" target="_blank"><i class="fab fa-linkedin"></i></a>
       <a href="https://www.jobstreet.co.id/id/jobseeker/profile" target="_blank"><i class="fas fa-briefcase"></i></a>
+      <a href="https://github.com/Evildeye" target="_blank"><i class="fab fa-github"></i></a>
     </div>
     <p>© 2025 HusenFahmi. All rights reserved.</p>
   </footer>
