--- a/index.html
+++ b/index.html
@@ -7,14 +7,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <noscript>
-    <style>
-      .fade-section {
-        opacity: 1 !important;
-        transform: none !important;
-      }
-    </style>
-  </noscript>
 </head>
 <body>
   <header class="navbar">
@@ -74,10 +66,10 @@
   <section id="portfolio" class="portfolio fade-section">
     <h2>My Recent Work</h2>
     <div class="portfolio-grid">
-      <img src="project1.jpg" />
-      <img src="project2.jpg" />
-      <img src="project3.jpg" />
-      <img src="project4.jpg" />
+      <img src="project1.jpg" alt="Project 1"/>
+      <img src="project2.jpg" alt="Project 2"/>
+      <img src="project3.jpg" alt="Project 3"/>
+      <img src="project4.jpg" alt="Project 4"/>
     </div>
   </section>
 
@@ -91,7 +83,9 @@
       <a href="https://www.jobstreet.co.id/id/jobseeker/profile" target="_blank"><i class="fas fa-briefcase"></i></a>
       <a href="https://github.com/Evildeye" target="_blank"><i class="fab fa-github"></i></a>
     </div>
-    <p>© 2025 HusenFahmi. All rights reserved.</p>
+    <p>© 2025 Husen Fahmi. All rights reserved.</p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
