--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Personal Brand | Husen Fahmi</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link rel="stylesheet" href="style.css" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
@@ -18,9 +18,16 @@
         <li><a href="#services">Services</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="https://www.linkedin.com/in/husenfahmi" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-        <li><a href="https://www.jobstreet.co.id/id/jobseeker/profile" target="_blank"><i class="fas fa-briefcase"></i></a></li>
-        <li><a href="https://github.com/Evildeye" target="_blank"><i class="fab fa-github"></i></a></li>
+        <li>
+  <a href="https://www.linkedin.com/in/husenfahmi" target="_blank"><i class="fa-brands fa-linkedin fa-xl"></i></a>
+</li>
+<li>
+  <a href="https://www.jobstreet.co.id/id/jobseeker/profile" target="_blank"><i class="fa-solid fa-briefcase fa-xl"></i></a>
+</li>
+<li>
+  <a href="https://github.com/Evildeye" target="_blank"><i class="fa-brands fa-github fa-xl"></i></a>
+</li>
+
       </ul>
     </nav>
   </header>
@@ -79,10 +86,10 @@
     <p>Phone: 085774590205</p>
     <p>Instagram: @evildeye</p>
     <div class="social-icons">
-      <a href="https://www.linkedin.com/in/husenfahmi" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://www.jobstreet.co.id/id/jobseeker/profile" target="_blank"><i class="fas fa-briefcase"></i></a>
-      <a href="https://github.com/Evildeye" target="_blank"><i class="fab fa-github"></i></a>
-    </div>
+  <a href="https://www.linkedin.com/in/husenfahmi" target="_blank"><i class="fa-brands fa-linkedin fa-2x"></i></a>
+  <a href="https://www.jobstreet.co.id/id/jobseeker/profile" target="_blank"><i class="fa-solid fa-briefcase fa-2x"></i></a>
+  <a href="https://github.com/Evildeye" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
+</div>
     <p>© 2025 Husen Fahmi. All rights reserved.</p>
   </footer>
 
