--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
   </section>
 
   <section id="services" class="services fade-section">
-    <h2>My Services</h2>
+ <h2 class="section-title">My Services</h2>
+
     <div class="service-grid">
       <div class="service-box"><i class="fas fa-pencil-ruler"></i><p>Communication & Presentation</p></div>
       <div class="service-box"><i class="fas fa-code"></i><p>Problem Solving</p></div>
@@ -71,7 +72,8 @@
   </section>
 
   <section id="portfolio" class="portfolio fade-section">
-    <h2>My Recent Work</h2>
+<h2 class="section-title">My Recent Work</h2>
+
     <div class="portfolio-grid">
       <img src="project1.jpg" alt="Project 1"/>
       <img src="project2.jpg" alt="Project 2"/>
