--- a/index.html
+++ b/index.html
@@ -58,8 +58,13 @@
     </div>
   </section>
 
-  <section id="services" class="services fade-section">
- <h2 class="section-title">My Services</h2>
+<div class="section-title-wrapper">
+  <h2 class="section-title">My Services</h2>
+</div>
+
+<!-- lalu lanjutkan bagian konten servicenya -->
+<div class="service-grid">...</div>
+
 
     <div class="service-grid">
       <div class="service-box"><i class="fas fa-pencil-ruler"></i><p>Communication & Presentation</p></div>
@@ -71,8 +76,10 @@
     </div>
   </section>
 
-  <section id="portfolio" class="portfolio fade-section">
-<h2 class="section-title">My Recent Work</h2>
+  <div class="section-title-wrapper">
+  <h2 class="section-title">My Recent Work</h2>
+</div>
+
 
     <div class="portfolio-grid">
       <img src="project1.jpg" alt="Project 1"/>
