--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     </div>
   </section>
 
+  <section id="services" class="fade-section">
 <div class="section-title-wrapper">
   <h2 class="section-title">My Services</h2>
 </div>
@@ -76,6 +77,7 @@
     </div>
   </section>
 
+  <section id="portfolio" class="fade-section">
   <div class="section-title-wrapper">
   <h2 class="section-title">My Recent Work</h2>
 </div>
