--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Personal Brand | Husen Fahmi</title>
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link rel="stylesheet" href="style.css" />
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header class="navbar">
@@ -18,16 +17,9 @@
         <li><a href="#services">Services</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li>
-  <a href="https://www.linkedin.com/in/husenfahmi" target="_blank"><i class="fa-brands fa-linkedin fa-xl"></i></a>
-</li>
-<li>
-  <a href="https://www.jobstreet.co.id/id/jobseeker/profile" target="_blank"><i class="fa-solid fa-briefcase fa-xl"></i></a>
-</li>
-<li>
-  <a href="https://github.com/Evildeye" target="_blank"><i class="fa-brands fa-github fa-xl"></i></a>
-</li>
-
+        <li><a href="https://www.linkedin.com/in/husenfahmi" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+        <li><a href="https://www.jobstreet.co.id/id/jobseeker/profile" target="_blank"><i class="fa-solid fa-briefcase"></i></a></li>
+        <li><a href="https://github.com/Evildeye" target="_blank"><i class="fa-brands fa-github"></i></a></li>
       </ul>
     </nav>
   </header>
@@ -43,7 +35,7 @@
       </div>
     </div>
     <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100">
-      <path fill="#ffffff" fill-opacity="1" d="M0,64L48,80C96,96,192,128,288,128C384,128,480,96,576,74.7C672,53,768,43,864,69.3C960,96,1056,160,1152,165.3C1248,171,1344,117,1392,90.7L1440,64L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+      <path fill="#ffffff" fill-opacity="1" d="M0,64L48,80C96,96,192,128,288,128C384,128,480,96,576,74.7C672,53,768,43,864,69.3C960,96,1056,160,1152,165.3C1248,171,1344,117,1392,90.7L1440,64L1440,0L0,0Z"></path>
     </svg>
   </section>
 
@@ -51,45 +43,36 @@
     <div class="container">
       <img src="img/profile.jpg" alt="Your Photo" class="about-img"/>
       <div class="about-text">
-        <h2>About Me</h2>
-        <p>I’m Husen Fahmi, a student and I’m currently learning to build engaging and modern websites while improving my creativity and logic. I dont know, just bored and need a job</p>
+        <h2 class="section-title">About Me</h2>
+        <p>I’m Husen Fahmi, a student and I’m currently learning to build engaging and modern websites while improving my creativity and logic. I don't know, just bored and need a job</p>
         <a href="cv-husenfahmi.pdf" class="btn" download>Download CV</a>
       </div>
     </div>
   </section>
 
-  <section id="services" class="fade-section">
-<div class="section-title-wrapper">
-  <h2 class="section-title">My Services</h2>
-</div>
-
-<!-- lalu lanjutkan bagian konten servicenya -->
-<div class="service-grid">...</div>
-
-
-    <div class="service-grid">
-      <div class="service-box"><i class="fas fa-pencil-ruler"></i><p>Communication & Presentation</p></div>
-      <div class="service-box"><i class="fas fa-code"></i><p>Problem Solving</p></div>
-      <div class="service-box"><i class="fas fa-paint-brush"></i><p>Adaptability</p></div>
-      <div class="service-box"><i class="fas fa-search"></i><p>Time Management</p></div>
-      <div class="service-box"><i class="fas fa-bullhorn"></i><p>Web Design with AI</p></div>
-      <div class="service-box"><i class="fas fa-mobile-alt"></i><p>Prompt Engineering</p></div>
-    </div>
-  </section>
-
-  <section id="portfolio" class="fade-section">
   <div class="section-title-wrapper">
-  <h2 class="section-title">My Recent Work</h2>
-</div>
+    <h2 class="section-title">My Services</h2>
+  </div>
 
+  <div id="services" class="service-grid">
+    <div class="service-box"><i class="fas fa-pencil-ruler"></i><p>Communication & Presentation</p></div>
+    <div class="service-box"><i class="fas fa-code"></i><p>Problem Solving</p></div>
+    <div class="service-box"><i class="fas fa-paint-brush"></i><p>Adaptability</p></div>
+    <div class="service-box"><i class="fas fa-search"></i><p>Time Management</p></div>
+    <div class="service-box"><i class="fas fa-bullhorn"></i><p>Web Design with AI</p></div>
+    <div class="service-box"><i class="fas fa-mobile-alt"></i><p>Prompt Engineering</p></div>
+  </div>
 
-    <div class="portfolio-grid">
-      <img src="project1.jpg" alt="Project 1"/>
-      <img src="project2.jpg" alt="Project 2"/>
-      <img src="project3.jpg" alt="Project 3"/>
-      <img src="project4.jpg" alt="Project 4"/>
-    </div>
-  </section>
+  <div class="section-title-wrapper">
+    <h2 class="section-title">My Recent Work</h2>
+  </div>
+
+  <div id="portfolio" class="portfolio-grid">
+    <img src="project1.jpg" alt="Project 1"/>
+    <img src="project2.jpg" alt="Project 2"/>
+    <img src="project3.jpg" alt="Project 3"/>
+    <img src="project4.jpg" alt="Project 4"/>
+  </div>
 
   <footer id="contact" class="contact fade-section">
     <h2>Contact Me</h2>
@@ -97,13 +80,11 @@
     <p>Phone: 085774590205</p>
     <p>Instagram: @evildeye</p>
     <div class="social-icons">
-  <a href="https://www.linkedin.com/in/husenfahmi" target="_blank"><i class="fa-brands fa-linkedin fa-2x"></i></a>
-  <a href="https://www.jobstreet.co.id/id/jobseeker/profile" target="_blank"><i class="fa-solid fa-briefcase fa-2x"></i></a>
-  <a href="https://github.com/Evildeye" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
-</div>
+      <a href="https://www.linkedin.com/in/husenfahmi" target="_blank"><i class="fa-brands fa-linkedin fa-2x"></i></a>
+      <a href="https://www.jobstreet.co.id/id/jobseeker/profile" target="_blank"><i class="fa-solid fa-briefcase fa-2x"></i></a>
+      <a href="https://github.com/Evildeye" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
+    </div>
     <p>© 2025 Husen Fahmi. All rights reserved.</p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
