--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <!-- Navbar -->
   <nav class="navbar">
     <div class="logo">HUSEN FAHMI</div>
-    <ul>
+    <div class="menu-toggle"><i class="fas fa-bars"></i></div>
+    <ul class="nav-links">
       <li><a href="#about"><i class="fas fa-user"></i></a></li>
       <li><a href="#services"><i class="fas fa-cogs"></i></a></li>
       <li><a href="#portfolio"><i class="fas fa-briefcase"></i></a></li>
@@ -87,5 +88,7 @@
     </div>
   </footer>
 
+  <script src="script.js"></script>
 </body>
-</html>
+  </html>
+    
