--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <!-- Navbar -->
   <nav class="navbar">
     <div class="logo">HUSEN FAHMI</div>
-    <div class="menu-toggle"><i class="fas fa-bars"></i></div>
-    <ul class="nav-links">
+    <div class="hamburger" id="hamburger">
+      <i class="fas fa-bars"></i>
+    </div>
+    <ul class="nav-links" id="nav-links">
       <li><a href="#about"><i class="fas fa-user"></i></a></li>
       <li><a href="#services"><i class="fas fa-cogs"></i></a></li>
       <li><a href="#portfolio"><i class="fas fa-briefcase"></i></a></li>
@@ -33,7 +35,7 @@
   </section>
 
   <!-- About Section -->
-  <section class="about" id="about">
+  <section class="about fade-section" id="about">
     <div class="section-title-wrapper">
       <h2 class="section-title">About Me</h2>
     </div>
@@ -46,7 +48,7 @@
   </section>
 
   <!-- Services -->
-  <section id="services">
+  <section id="services" class="fade-section">
     <div class="section-title-wrapper">
       <h2 class="section-title">My Services</h2>
     </div>
@@ -67,7 +69,7 @@
   </section>
 
   <!-- Portfolio -->
-  <section id="portfolio">
+  <section id="portfolio" class="fade-section">
     <div class="section-title-wrapper">
       <h2 class="section-title">My Portfolio</h2>
     </div>
@@ -90,5 +92,5 @@
 
   <script src="script.js"></script>
 </body>
-  </html>
-    
+                                                         </html>
+                                   
